# laptop-system

./: .gitignore  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
crawler_app/: docker-compose.yml  dockerfile  dockerfile.scrapyd  entrypoint.sh  requirements.txt  scrapy.cfg  setup.py  test.txt
crawler_app/crawler_app/: items.py  middlewares.py  pipelines.py  settings.py
crawler_app/crawler_app/spiders/: laptop_newegg.py
crawler_app/dbs/: crawler_app.db
crawler_app/eggs/crawler_app/: 1721133121.egg
crawler_app/project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
crawler_app/scrape/: dockerfile  manage.py  requirements.txt
crawler_app/scrape/quickstart/: router.py  views.py
crawler_app/scrape/scrape/: asgi.py  settings.py  urls.py  wsgi.py
process_data/: Dockerfile  docker-compose.yml  requirements.txt  spark-demo.ipynb
